--- a/assets/sass/sections/author/_index.scss
+++ b/assets/sass/sections/author/_index.scss
@@ -10,6 +10,10 @@
   position: relative;
   text-align: center;
 
+  @include mq(desktop) {
+    padding: $distance * 3 $distance * 1.5 0;
+  }
+
   @include mq(mobile) {
     padding: 0 $distance * 1.5;
   }
@@ -62,7 +66,7 @@
     width: 66.66vw;
     z-index: -1;
 
-    @include mq(mobile) {
+    @include mq(hybrid) {
       margin-bottom: -$distance * 1.5;
       margin-left: $distance * 1.5;
       z-index: 1;
@@ -96,7 +100,7 @@
     width: 50vw;
     z-index: 1;
 
-    @include mq(mobile) {
+    @include mq(hybrid) {
       height: auto;
       max-height: none;
       max-width: none;
@@ -114,7 +118,7 @@
       right: 0;
       width: calc(66.66% - #{$distance * 3});
 
-      @include mq(mobile) {
+      @include mq(hybrid) {
         position: static;
         width: 100%;
       }
