--- a/assets/sass/partials/base/_buttons.scss
+++ b/assets/sass/partials/base/_buttons.scss
@@ -17,6 +17,7 @@
 
   &:hover {
     border: $border solid $primary;
+    color: $primary;
   }
 }
 // -----------------------------------------------------------------------------
