--- a/assets/sass/variables/_fonts.scss
+++ b/assets/sass/variables/_fonts.scss
@@ -28,6 +28,7 @@ $fh4:                        1.25rem;
 $fh5:                        1rem;
 $fh6:                        .85rem;
 
+$fdef:                       1rem;
 $fsmall:                     .85rem;
 $ftiny:                      .7rem;
 // -----------------------------------------------------------------------------
