--- a/assets/sass/partials/base/_general.scss
+++ b/assets/sass/partials/base/_general.scss
@@ -42,7 +42,9 @@ body {
 
   &.nav-opened {
     height: 100vh;
+    max-height: 100vh;
     overflow: hidden;
+    overflow-scrolling:touch;
   }
 }
 // -----------------------------------------------------------------------------
