--- a/default.hbs
+++ b/default.hbs
@@ -19,7 +19,7 @@
   <meta name="description" content="{{meta_description}}" />
 
   <meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
