--- a/assets/sass/partials/base/_menu-icon.scss
+++ b/assets/sass/partials/base/_menu-icon.scss
@@ -10,6 +10,7 @@
 // General Styles --------------------------------------------------------------
   animation: menu-h-in .333s ease-out forwards; // Slide In animation
   appearance: none;
+  background-color: $white;
   border: 0;
   box-shadow: none;
   cursor: pointer;
@@ -18,8 +19,8 @@
   outline: 0;
   padding: 0 $distance / 4;
   position: absolute;
-  right: calc(50% - #{($site-box / 2)});
-  top: (($header-height - $icon) / 2) + $distance;
+  right: calc(50% - #{($site-box / 2) - ($distance * 3)});
+  top: ($header-height - $icon) / 2;
   transform: translateZ(1px);
   width: #{$icon + $distance / 2};
   z-index: $z-top + 2; // over the nav menu
