--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -8,7 +8,7 @@
 // Nav block
 // -----------------------------------------------------------------------------
 body > .nav {
-  background-color: $white;
+  // background-color: $white;
   bottom: 0;
   color: $black;
   height: $menu-height;
