Test safari-ios menu button z-index.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,21 +72,7 @@ body {
   text-rendering: optimizeLegibility; }
   body.nav-opened {
     height: 100vh;
-    max-height: 100vh;
     overflow: hidden; }
-    @media (max-width: 854px) {
-      body.nav-opened {
-        overflow-scrolling: touch; }
-        body.nav-opened::after {
-          background-color: white;
-          bottom: 0;
-          content: '';
-          height: 100%;
-          left: 0;
-          position: fixed;
-          right: 0;
-          top: 0;
-          width: 100%; } }
 
 .site-wrapper {
   max-width: 1280px;
@@ -378,6 +364,7 @@ body {
         fill: #223347 !important; } }
 
 body > .nav {
+  background-color: white;
   bottom: 0;
   color: #223347;
   height: 100vh;
@@ -389,6 +376,20 @@ body > .nav {
   top: 0;
   width: 100%;
   z-index: 10001; }
+  @media (max-width: 854px) {
+    body > .nav {
+      background-color: transparent; }
+      body > .nav::after {
+        background-color: white;
+        bottom: 0;
+        content: '';
+        height: 100%;
+        left: 0;
+        position: fixed;
+        right: 0;
+        top: 0;
+        width: 100%;
+        z-index: -1; } }
   body > .nav.closed {
     animation: menu-out .333s ease-in forwards; }
   body > .nav > ul {
