--- a/index.hbs
+++ b/index.hbs
@@ -28,7 +28,7 @@
 {{! The main content area on the homepage }}
 <main id="content" class="home-content" role="main">
 
-  {{#get "posts" filter="featured:true" order="published_at" include="tags" as |featured|}}
+  {{#get "posts" filter="featured:true" order="published_at desc" include="tags" as |featured|}}
     {{! The tag below includes the post loop - partials/home-project.hbs }}
     <section class="home-cases">
       {{#foreach featured}}
