Added adaptative background plugin.

--- a/default.hbs
+++ b/default.hbs
@@ -62,7 +62,9 @@
   {{! Ghost outputs important scripts and data with this tag }}
   {{ghost_foot}}
 
+  {{! Third party }}
   <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
+  <script type="text/javascript" src="{{asset "js/jquery.adaptive-backgrounds.js"}}"></script>
   <script type="text/javascript" src="{{asset "js/prefixfree.min.js"}}"></script>
   <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
   {{! The main JavaScript file for hi contrast }}
