--- a/post.hbs
+++ b/post.hbs
@@ -8,7 +8,7 @@
   {{#if image}}
     <section class="post-heading">
       <header class="main-header post-head">
-        <figure class="post-cover" style="background-image: url({{image}})"></figure>
+        <figure class="post-cover" style="background-image: url({{image}})" data-adaptive-background data-ab-css-background></figure>
       </header>
 
         <section class="main-info">
