--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,25 +255,30 @@ body {
   border: 6px solid #f03246;
   max-width: calc(33.33vw - 20px);
   padding: 15px;
-  width: 300px; }
+  width: 300px;
+  transition: border-color 250ms ease-out; }
   @media (max-width: 640px) {
     .menu-box {
       display: none; } }
   .menu-box.left {
     margin-left: 0;
     text-align: left; }
+    .menu-box.left li:hover {
+      color: #df1026;
+      padding-left: 10px; }
   .menu-box.right {
     margin-right: 0;
     text-align: right; }
+    .menu-box.right li:hover {
+      color: #df1026;
+      padding-right: 10px; }
   .menu-box li {
     color: #f03246;
     font-size: 2rem;
     font-weight: 300;
     line-height: 1.11em;
     list-style: none;
-    transition: color 150ms; }
-    .menu-box li:hover {
-      color: #df1026; }
+    transition: color 250ms ease-out, padding 150ms; }
     .menu-box li.nav-current {
       font-weight: 700; }
     .menu-box li > a:hover {
@@ -1229,7 +1234,8 @@ h6 {
     font-size: 0;
     font-weight: 300;
     line-height: 1em;
-    position: absolute; }
+    position: absolute;
+    transition: color 250ms ease-out; }
     .post-template:not(.page-template) .main-info .post-cap::first-letter {
       font-size: 41rem; }
 
