--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -464,10 +464,10 @@ body > .nav {
   .post-content p + p {
     margin-top: 20px; }
   .post-content p a {
-    color: #f03246; }
+    color: #6086b3; }
     .post-content p a:not(.button):hover {
       border: 0;
-      color: #f36271; }
+      color: #9ab2ce; }
 
 .post-content ol,
 .post-content ul {
